// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Icons should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r0»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r0»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Right icon
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Right icon. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {
                    "paddingRight": 45,
                  },
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
          <Text
            accessible={false}
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#26312A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "position": "absolute",
                    },
                    {
                      "right": 12,
                    },
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r1»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r1»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Left icon
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Left icon. https://open.rocket.chat/images/logo/android-chrome-512x512.png."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  {
                    "paddingLeft": 45,
                  },
                  {},
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="https://open.rocket.chat/images/logo/android-chrome-512x512.png"
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#5C6B61",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "position": "absolute",
                    },
                    {
                      "left": 12,
                    },
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r2»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r2»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Both icons
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Both icons. https://open.rocket.chat/images/logo/android-chrome-512x512.png."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  {
                    "paddingLeft": 45,
                  },
                  {
                    "paddingRight": 45,
                  },
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="https://open.rocket.chat/images/logo/android-chrome-512x512.png"
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#5C6B61",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "position": "absolute",
                    },
                    {
                      "left": 12,
                    },
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#26312A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "position": "absolute",
                    },
                    {
                      "right": 12,
                    },
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r3»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r3»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Icon and touchable clear input
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Icon and touchable clear input. https://open.rocket.chat/images/logo/android-chrome-512x512.png."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {
                    "paddingRight": 45,
                  },
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="https://open.rocket.chat/images/logo/android-chrome-512x512.png"
          />
          <View
            style={
              [
                {
                  "position": "absolute",
                },
                {
                  "right": 12,
                },
              ]
            }
          >
            <ExternalKeyboardView
              canBeFocused={true}
              enableA11yFocus={false}
              enableContextMenu={false}
              group={false}
              haloEffect={true}
              hasKeyDownPress={false}
              hasKeyUpPress={true}
              hasOnFocusChanged={true}
              lockFocus={0}
              onContextMenuPress={[Function]}
              onFocusChange={[Function]}
              onKeyUpPress={[Function]}
              orderIndex={-1}
              screenAutoA11yFocusDelay={300}
              style={
                [
                  undefined,
                  undefined,
                ]
              }
            >
              <RNGestureHandlerButton
                activeOpacity={1}
                collapsable={false}
                delayLongPress={600}
                enabled={true}
                handlerTag={-1}
                handlerType="NativeViewGestureHandler"
                innerRef={null}
                onActiveStateChange={[Function]}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                onPress={[Function]}
                rippleColor="#ECEFEB"
                style={
                  [
                    {
                      "backgroundColor": undefined,
                      "borderRadius": undefined,
                      "margin": undefined,
                      "marginBottom": undefined,
                      "marginEnd": undefined,
                      "marginHorizontal": undefined,
                      "marginLeft": undefined,
                      "marginRight": undefined,
                      "marginStart": undefined,
                      "marginTop": undefined,
                      "marginVertical": undefined,
                    },
                    {
                      "cursor": undefined,
                    },
                  ]
                }
                testID="clear-text-input"
                underlayColor="#ECEFEB"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#ECEFEB",
                      "borderBottomLeftRadius": undefined,
                      "borderBottomRightRadius": undefined,
                      "borderRadius": undefined,
                      "borderTopLeftRadius": undefined,
                      "borderTopRightRadius": undefined,
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  accessibilityLabel="Clear input"
                  accessible={true}
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#26312A",
                          "fontSize": 20,
                        },
                        [
                          {
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                        {
                          "fontFamily": "custom",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </RNGestureHandlerButton>
            </ExternalKeyboardView>
          </View>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;

exports[`Story Snapshots: Loading should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r4»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r4»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Loading false
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Loading false. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r5»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r5»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Loading true
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Loading true. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
          <ActivityIndicator
            color="#26312A"
            style={
              [
                {
                  "position": "absolute",
                },
                {
                  "right": 12,
                },
              ]
            }
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;

exports[`Story Snapshots: Multiline should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r6»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r6»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Multiline text
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Multiline text. Rocket.Chat

https://open.rocket.chat/images/logo/android-chrome-512x512.png
."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            multiline={true}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat

https://open.rocket.chat/images/logo/android-chrome-512x512.png
"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;

exports[`Story Snapshots: SecureTextEntry should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r7»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r7»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Secure text disabled
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Secure text disabled. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r8»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r8»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Secure text enabled
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Secure text enabled."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            secureTextEntry={true}
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {
                    "paddingRight": 45,
                  },
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
          <A11yIndexView
            importantForAccessibility="yes"
            orderFocusType={0}
            orderIndex={2}
            orderKey="«r8»"
            style={
              [
                {
                  "position": "absolute",
                },
                {
                  "right": 12,
                },
              ]
            }
          >
            <ExternalKeyboardView
              canBeFocused={true}
              enableA11yFocus={false}
              enableContextMenu={false}
              group={false}
              haloEffect={true}
              hasKeyDownPress={false}
              hasKeyUpPress={true}
              hasOnFocusChanged={true}
              lockFocus={0}
              onContextMenuPress={[Function]}
              onFocusChange={[Function]}
              onKeyUpPress={[Function]}
              orderIndex={-1}
              screenAutoA11yFocusDelay={300}
              style={
                [
                  undefined,
                  undefined,
                ]
              }
            >
              <RNGestureHandlerButton
                activeOpacity={1}
                collapsable={false}
                delayLongPress={600}
                enabled={true}
                handlerTag={-1}
                handlerType="NativeViewGestureHandler"
                innerRef={null}
                onActiveStateChange={[Function]}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                onPress={[Function]}
                rippleColor="#ECEFEB"
                style={
                  [
                    {
                      "backgroundColor": undefined,
                      "borderRadius": undefined,
                      "margin": undefined,
                      "marginBottom": undefined,
                      "marginEnd": undefined,
                      "marginHorizontal": undefined,
                      "marginLeft": undefined,
                      "marginRight": undefined,
                      "marginStart": undefined,
                      "marginTop": undefined,
                      "marginVertical": undefined,
                    },
                    {
                      "cursor": undefined,
                    },
                  ]
                }
                underlayColor="#ECEFEB"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#ECEFEB",
                      "borderBottomLeftRadius": undefined,
                      "borderBottomRightRadius": undefined,
                      "borderRadius": undefined,
                      "borderTopLeftRadius": undefined,
                      "borderTopRightRadius": undefined,
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  accessibilityLabel="Show Password"
                  accessible={true}
                  style={{}}
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#26312A",
                          "fontSize": 20,
                        },
                        [
                          {
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                        {
                          "fontFamily": "custom",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </RNGestureHandlerButton>
            </ExternalKeyboardView>
          </A11yIndexView>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;

exports[`Story Snapshots: ShortAndLong should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r9»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r9»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Short Text
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Short Text. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«ra»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«ra»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#16211A",
              },
            ]
          }
        >
          Long Text
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Long Text. https://open.rocket.chat/images/logo/android-chrome-512x512.png."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8FA096"
            style={
              [
                {
                  "color": "#16211A",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FDFDFC",
                    "borderColor": "#E1E7E1",
                    "color": "#16211A",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="https://open.rocket.chat/images/logo/android-chrome-512x512.png"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;
